objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Type_Of_Calls__c</fullName>
        <description>To identify the different kind of issues/concern being received by the customer service team in each call received</description>
        <label>Call Category</label>
        <picklist>
            <picklistValues>
                <fullName>CSR Related Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSR Related Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSE Related Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Related Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Related Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Related Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Related Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTO Related Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Inquiry - Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Inquiry - Home Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urgent_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weeks_Required__c</fullName>
        <formula>(Tracking_Date__c - Today ())/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weeks Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>icrt__AeGuide_Name__c</fullName>
        <description>Used to identify the Sales Guide matching the task</description>
        <label>Guide Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>SSO_Task_Due_Date__c</columns>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>